Added app colors and updated icons

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="bottomBar2">Stats</string>
     <string name="bottomBar3">Notes</string>
     <string name="bottomBar4">Tasks</string>
+    <string name="add_habit_action">Add</string>
 </resources>
