--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="bottomBar3">Notes</string>
     <string name="bottomBar4">Tasks</string>
     <string name="add_habit_action">Add</string>
+    <string name="add_habit_top_bar_title">Add Habit</string>
 </resources>
