Added sketch of add new habit screen

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="bottomBar4">Tasks</string>
     <string name="add_habit_action">Add</string>
     <string name="add_habit_top_bar_title">Add Habit</string>
+    <string name="add_habit_select_icon">Habit icon</string>
     <string name="top_bar_back_action">Back</string>
 </resources>
